# icarus-desktop

./: Cargo.toml  README.md
icarus-cli/: Cargo.toml
icarus-cli/src/: main.rs
icarus-client/: Cargo.toml
icarus-client/src/: error.rs  lib.rs  utils.rs
icarus-desktop/: Cargo.toml
icarus-desktop/src/: lib.rs  main.rs  sensors.rs  throttle.rs
