[package]
name = "icarus-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
icarus-client = { path = "../icarus-client" }
tokio = { version = "1.22", features = ["rt", "sync", "macros", "signal"] }
anyhow = "1"
btleplug = "0.10"
clap = {version = "4.1.8", features = ["derive"]}
pretty_env_logger = "0.4"
log = "0.4"
uuid = "1"
