[package]
name = "icarus-desktop"
version = "0.1.0"
edition = "2021"

[dependencies]
icarus-client = { path="../icarus-client" }
bevy = { version = "0.9.0" }
bevy_egui = "0.19"
itertools = "0.10"
tokio = { version = "1.22", features = ["rt", "sync"] }
anyhow = "1"
log = "0.4"
pretty_env_logger = "0.4"